manifests/envs/desa/web-front-admision-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-front-admision-service
spec:
  selector:
    app: web-front-admision
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
