manifests/envs/desa/web-front-admision-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-front-admision-ingress
  annotations:
        kubernetes.io/ingress.class: nginx
       nginx.ingress.kubernetes.io/rewrite-target: /$1
       nginx.ingress.kubernetes.io/enable-cors: "true"
       nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
       nginx.ingress.kubernetes.io/configuration-snippet: |
          more_set_headers "Access-Control-Allow-Origin: $http_origin";
          more_set_headers "'Access-Control-Allow-Headers: Accept,Content-Type,Keep-Alive,Origin,x-access-token' always";
spec:
  tls:
    - hosts:
      - desa-salud.achs.cl
      secretName: wildcard-achs-cl
  rules:
  - host: desa-salud.achs.cl 
    http:
      paths:
      - path: /web-admision(/?.*)
        backend:
          serviceName: web-front-admision-service
          servicePort: 80
      - path: /web-firmadigital(/?.*)
        backend:
          serviceName: web-front-firmadigital-service
          servicePort: 80 
      - path: /web-firmadigital-totem(/?.*)
        backend:
          serviceName: web-front-firmadigital-totem-service
          servicePort: 80            
      - path: /web-digitalizador-documentos(/?.*)
        backend:
          serviceName: web-front-digitalizaciondocumentos-service
          servicePort: 80
